# Zyrnix

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: sanitizers-fuzz.yml
benchmarks/: CMakeLists.txt
docs/: TESTING_CONTEXT_FEATURE.md  v1.0.4_FEATURES.md  v1.1.0_FEATURES.md  v1.1.1_FEATURES.md
docs/notes/: RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1-beta.1.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.1.3.md  TESTING_GUIDE_v1.1.0.md
examples/: async_logging.cpp  basic_logging.cpp  comprehensive_test.cpp  compression_example.cpp  conditional_logging.cpp  config_file_example.cpp  context_logging.cpp  custom_sink.cpp  daily_logs.cpp  file_vs_stdout.cpp  log_levels.cpp  metrics_example.cpp  minimal_build_example.cpp  multi_logger.cpp  multi_sink_example.cpp  network_test.cpp  rate_limiting_example.cpp  rotating_logs.cpp  signal_safe_example.cpp  v1.1.1_features.cpp
include/xlog/: color.hpp  config.hpp  config_watcher.hpp  formatter.hpp  hot_reload_manager.hpp  log_context.hpp  log_filter.hpp  log_health.hpp  log_level.hpp  log_macros.hpp  log_message.hpp  log_metrics.hpp  log_record.hpp  log_sink.hpp  logger.hpp  rate_limiter.hpp  util.hpp  xlog.hpp  xlog_features.hpp
include/xlog/async/: async_logger.hpp  async_queue.hpp  thread_pool.hpp
include/xlog/experimental/: json_sink.hpp  network_sink.hpp
include/xlog/fmt_compat/: fmt_integration.hpp  fmt_shim.hpp
include/xlog/sinks/: cloud_sinks.hpp  compressed_file_sink.hpp  daily_file_sink.hpp  file_sink.hpp  loki_sink.hpp  multi_sink.hpp  null_sink.hpp  rotating_file_sink.hpp  signal_safe_sink.hpp  stdout_sink.hpp  structured_json_sink.hpp
scripts/: build.sh  check_v1.1_features.sh  debug_run.sh  format.sh  install.sh  install_mac.sh  install_windows.bat  install_windows.ps1  memcheck.sh  tidy.sh
src/: color.cpp  config.cpp  config_watcher.cpp  formatter.cpp  hot_reload_manager.cpp  log_context.cpp  log_filter.cpp  log_health.cpp  log_metrics.cpp  logger.cpp  rate_limiter.cpp  util.cpp  xlog.cpp
src/async/: async_logger.cpp  async_queue.cpp  thread_pool.cpp
src/experimental/: json_sink.cpp  network_sink.cpp
src/experimental.disabled/: json_sink.cpp
src/sinks/: cloud_sinks.cpp  compressed_file_sink.cpp  daily_file_sink.cpp  file_sink.cpp  loki_sink.cpp  multi_sink.cpp  null_sink.cpp  rotating_file_sink.cpp  signal_safe_sink.cpp  stdout_sink.cpp  structured_json_sink.cpp
tests/: CMakeLists.txt
tools/: clang_format_all.py  generate_docs.py  generate_version.py
